move caption downwards to avoid overlapsing with "back" button

--- a/styles/contributions.scss
+++ b/styles/contributions.scss
@@ -8,6 +8,7 @@
 
     .nav {
         position: fixed;
-        
+        top: 0;
+        left: 0;
     }
 }
